Apache Tez Change Log
=====================


Release 0.7.0: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2072. Add missing Private annotation to createDAG in the DAG API class.
  TEZ-2095. master branch fails to compile against hadoop-2.4.
  TEZ-2093. Add events to MockDAGAppMaster and add e2e test for event routing
  TEZ-2075. Incompatible issue caused by TEZ-1233 that TezConfiguration.TEZ_SITE_XML is made private
  TEZ-2082. Race condition in TaskAttemptListenerImpTezDag.getTask()
  TEZ-1233. Allow configuration of framework parameters per vertex.
  TEZ-2045. TaskAttemptListener should not pull Tasks from AMContainer. Instead these should be registered with the listener.
  TEZ-1914. VertexManager logic should not run on the central dispatcher
  TEZ-2023. Refactor logIndividualFetchComplete() to be common for both shuffle-schedulers.
  TEZ-1999. IndexOutOfBoundsException during merge.
  TEZ-2000. Source vertex exists error during DAG submission.
  TEZ-2008. Add methods to SecureShuffleUtils to verify a reply based on a provided Key.
  TEZ-1995. Build failure against hadoop 2.2.
  TEZ-1997. Remove synchronization DefaultSorter::isRLENeeded() (Causes sorter to hang indefinitely in large jobs).
  TEZ-1996. Update Website after 0.6.0
  TEZ-1803. Support > 2gb sort buffer in pipelinedsorter.
  TEZ-1826. Add option to disable split grouping and local mode option for tez-examples.
  TEZ-1982. TezChild setupUgi should not be using environment.
  TEZ-1980. Suppress tez-dag findbugs warnings until addressed.
  TEZ-1855. Avoid scanning for previously written files within Inputs / Outputs.
  TEZ-1902. Fix findbugs warnings in tez-mapreduce.
  TEZ-1963. Fix post memory merge to be > 2 GB.
  TEZ-1901. Fix findbugs warnings in tez-examples.
  TEZ-1941. Memory provided by *Context.getAvailableMemory needs to be setup explicitly.
  TEZ-1879. Create local UGI instances for each task and the AM, when running in LocalMode.
  TEZ-1661. LocalTaskScheduler hangs when shutdown.